# mipt_homeworks_2025

./: Makefile  README.md  lefthook.yaml  pyproject.toml  run.py
.github/workflows/: setup.yml
app/: main.py
app/api/: repositories.py
app/core/: settings.py
app/infrastructure/: github_client.py
app/models/: github.py
app/services/: csv_header.py  csv_writer.py  repositories_service.py
homework_oop/src/: data_frame.py  dto.py  repositories.py
